--- a/src/app/approval/approval.component.html
+++ b/src/app/approval/approval.component.html
@@ -1,1 +1,7 @@
-<h2>Application {{ status }}</h2>
+
+<div class="container">
+  <h2 class="form-title">Application status</h2>
+  <div class="form-card">
+    <h2>Application {{ status }}</h2>
+  </div>
+</div>
